<resources>
    <string name="app_name">Password Manager</string>
    <string name="button_addPassword">Add Password</string>
    <string name="hint_passwordTitle">Password Title</string>
    <string name="hint_passwordPassword">Password</string>
    <string name="hint_passwordDescription">Description </string>
    <string name="menu_addPassword">Add</string>
    <string name="menu_cancelPassword">Cancel</string>
    <string name="enter_password_title"> Please enter a Password Title </string>
    <string name="save_password"> Save Password </string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_camera">Camera</string>

    <string name="select_password_image">Select password image</string>
    <string name="change_password_image">Change password image</string>

    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deletePassword">Delete</string>
    <string name="title_activity_password_maps">Map of All Passwords </string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="signin">Sign In</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>